--- a/src/router/openssl/Configurations/unix-Makefile.tmpl
+++ b/src/router/openssl/Configurations/unix-Makefile.tmpl
@@ -807,7 +807,7 @@ EOF
           return <<"EOF";
 $args{src}: $args{generator}->[0] $deps
 	\$(CC) $incs \$(CFLAGS) -E $args{generator}->[0] | \\
-	\$(PERL) -ne '/^#(line)?\\s*[0-9]+/ or print' > \$@
+	cat > \$@
 EOF
       }
   }
@@ -849,7 +849,7 @@ EOF
 $obj$objext: $deps
 	( trap "rm -f \$@.*" INT 0; \\
 	  \$(CPP) $incs \$(CFLAGS) $ecflags $srcs | \\
-	  \$(PERL) -ne '/^#(line)?\\s*[0-9]+/ or print' > \$@.s && \\
+	  cat > \$@.s && \\
 	  \$(CC) \$(CFLAGS) $ecflags -c -o \$\@ \$@.s )
 EOF
       } elsif (!$disabled{makedepend} && $makedepprog !~ /\/makedepend/) {
